fix: added bun-types

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,7 +25,8 @@
     "types": [
       "@types/jest",
       "jest",
-      "@testing-library/jest-dom"
+      "@testing-library/jest-dom",
+      "bun-types"
     ]
   },
   "include": [
